hphp/test/zend/good/ext/calendar/tests/bug55797_2.php.skipif
<?php 
include 'skipif.inc';
if (PHP_INT_SIZE == 4) {
        die("skip this test is for 64bit platform only");
}
?>