hphp/test/zend/bad/ext/xml/tests/xml001.php.skipif
<?php
require_once("skipif.inc");
XML_SAX_IMPL == 'libxml' && die('skip this test is not intended for libxml SAX parser');
?>